--- a/package.json
+++ b/package.json
@@ -13,12 +13,12 @@
     "clean": "tsc --build --clean"
   },
   "keywords": [],
-  "author": "",
+  "author": "Gustavo Silva",
   "license": "ISC",
   "devDependencies": {
-    "@types/jquery": "^2.0.42",
-    "concurrently": "^3.4.0",
-    "lite-server": "^2.6.1",
-    "typescript": "^2.3.2"
+    "@types/jquery": "3.5.16",
+    "concurrently": "7.6.0",
+    "lite-server": "2.6.1",
+    "typescript": "4.9.4"
   }
 }
